# ops-daemon-linux

./: .env.ops.template  .gitignore  .project-type  CLAUDE.md  D:\ClaudeProjects\proxy\proxy_backup.log.20260704-082652  config.yaml  daemon.pid  docker-compose.yml  pyproject.toml  service-registry.yaml
.claude/: settings.local.json
.claudetalk/: exit-marker.json  startup-marker.json
.github/workflows/: ci.yml
ops_daemon/: _proc.py  file_lock.py  llm.py  main.py  mcp_server.py  notify.py  process_manager.py  proxy_manager.py  repair.py  repair_coordinator.py  state_machine.py  trip_mgr.py  trip_runner.py  tunnel_manager.py
ops_daemon/checks/: _probe.py  claudetalk.py  cloudflared.py  compose_up.py  defense_layers.py  file_integrity.py  github_ci.py  logs.py  pact_broker.py  pact_verify.py  proxy.py  report_check.py  service_discovery.py  service_registry.py  services.py  ssl.py  system.py  trip_scanner.py  zombies.py
scripts/: check-daemon.sh.bak  claudetalk-default.service  feishu-bridge.service  ops-dashboard.service  pact_verify.py  run.sh  setup.sh  start-infra.sh  status.sh  stop-infra.sh  stop.sh
systemd/: trip@.service
tests/: test_file_lock.py  test_repair.py  test_watcher.py
